--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/guitar71989/js_proposal/issues"
   },
-  "homepage": "https://github.com/guitar71989/js_proposal#readme"
+  "homepage": "https://github.com/guitar71989/js_proposal#readme",
+  "dependencies": {
+    "babel-core": "^6.17.0",
+    "babel-preset-es2015": "^6.16.0"
+  }
 }
