--- a/package.json
+++ b/package.json
@@ -1,28 +1,19 @@
 {
-  "name": "Tetris",
+  "name": "Proof",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
+  "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "./node_modules/.bin/webpack --watch"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/guitar71989/js_proposal.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/guitar71989/js_proposal/issues"
-  },
-  "homepage": "https://github.com/guitar71989/js_proposal#readme",
   "dependencies": {
-    "babel-core": "^6.17.0",
-    "babel-preset-es2015": "^6.16.0"
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "webpack": "^1.13.3"
   }
 }
