--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "Proof",
   "version": "1.0.0",
-  "description": "",
+  "description": "[Play the game here][live]",
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "./node_modules/.bin/webpack --watch"
+    "webpack": "webpack --watch"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +15,17 @@
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "webpack": "^1.13.3"
-  }
+  },
+  "directories": {
+    "doc": "docs"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/guitar71989/Tetris.js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/guitar71989/Tetris.js/issues"
+  },
+  "homepage": "https://github.com/guitar71989/Tetris.js#readme"
 }
